force-app/main/default/staticresources/python/Disappear/src/objects/PubME__c.object
<CustomObject>
    <description>Record all Manuscript Equivalent points award to authors and others for their work on a publication</description>
    <fields>
        <fullName>ActualME__c</fullName>
        <description>Actual ME = Calculated ME unless a Business Admin enters the Override ME for this record</description>
        <label>Actual Me</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_ME_GUI__c</fullName>
        <inlineHelpText>&quot;Recalculate&quot; button is used for planning purpose and displays the potential Actual ME value in Actual ME GUI column. The values are not SAVED permanently. You need to click &quot;Save&quot; button to store the value(s) permanently.</inlineHelpText>
        <label>Actual ME GUI</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AppearRole__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Role that the Pub Team member played in the preparation of this Publication

Will be used to look up Awarded ME in PubTypeME</description>
        <inlineHelpText>APPEAR Roles include: Writing Coordinator, Writer, Editorial Support, GPPL, and Pub Specialist.</inlineHelpText>
        <label>Appear Role</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Appear_Role__c.isWritingRole__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Appear_Role__c</referenceTo>
        <relationshipLabel>Publication MEs</relationshipLabel>
        <relationshipName>Publication_MEs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardedME__c</fullName>
        <description>not being used - should be deleted after confirming with Swapnil</description>
        <label>Awarded ME</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalculatedME__c</fullName>
        <description>ME from PubType / Role / Scope of Work calculation</description>
        <label>Calculated ME</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Department__c.isLogicallyDeleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Please do not select [EXPIRED] Department values</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Publication MEs</relationshipLabel>
        <relationshipName>Publication_MEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diff_Actual_Calc__c</fullName>
        <formula>ActualME__c - CalculatedME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff Actual Calc</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diff_Override_Calc__c</fullName>
        <formula>ActualME__c - OverrideME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff Override Calc</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emp_Type__c</fullName>
        <description>This field indicates whether the Writing Role Member is Amgen Full Time Employee or Outsourced</description>
        <label>Emp. Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contingent Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ext Bus Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FPR_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FPR Cycle</label>
        <referenceTo>FPR_Cycle__c</referenceTo>
        <relationshipLabel>Publication MEs</relationshipLabel>
        <relationshipName>Publication_MEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FPR_Cycle_sort_num__c</fullName>
        <formula>IF(FPR_Cycle__c = null, 0, FPR_Cycle__r.FPR_Cycle_Num__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FPR Cycle num for sorting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCurrentSubmissionCycleForPub__c</fullName>
        <formula>Publication__r.Current_SubmissionCycle_Id_Formula__c = Submission_Cycle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCurrentSubmissionCycleForPub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsResend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsResend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyGMWUse__c</fullName>
        <description>Used for Siebel-originated legacy data.</description>
        <label>LegacyGMWUse</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyPrior_ActualME__c</fullName>
        <label>LegacyPrior ActualME</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ME_Status__c</fullName>
        <label>ME Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeCycleNum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>ME Cycle Num - starts at 0 for new records.</description>
        <inlineHelpText>Used to differentiate between Non-Material-Changes within an FPR cycle.  
if no NMC - then ME cycle # = FPR Cycle #.</inlineHelpText>
        <label>ME Cycle #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MeType__c</fullName>
        <description>Column heading is [Pub Status] for this field on the Writing Coordinators grid.</description>
        <formula>IF( IsResend__c , &quot;Resent&quot;, &quot;Submitted/Completed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MeType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to identify the Organization of the Writing Role Member</description>
        <label>Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Organization__c.isLogicallyDeleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Please do not select [EXPIRED] Company values</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Publication MEs</relationshipLabel>
        <relationshipName>Publication_MEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverrideME__c</fullName>
        <description>Available for Business Admin to override the calculated ME</description>
        <label>Override ME</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PubStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication Status</label>
        <referenceTo>PubStatus__c</referenceTo>
        <relationshipLabel>Publication MEs</relationshipLabel>
        <relationshipName>Publication_MEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Publication MEs</relationshipLabel>
        <relationshipName>Publication_MEs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReasonForMEChange__c</fullName>
        <label>Reason For ME Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Actual__c</fullName>
        <description>This field contains the Actual Pub ME Migrated from Siebel system.
Appear WILL NOT be writing into this field after data migration has been completed
it can be used to create reports to make sure Actual ME for Legacy pub did not get change by accident.</description>
        <label>Siebel_Actual</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_Cycle_Num_Formula__c</fullName>
        <formula>Submission_Cycle__r.Submission_Cycle_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Cycle #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission Cycle</label>
        <referenceTo>SubmissionCycle__c</referenceTo>
        <relationshipLabel>Publication MEs</relationshipLabel>
        <relationshipName>Publication_MEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WritingRoleMember__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Writing Role Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Publication MEs</relationshipLabel>
        <relationshipName>Publication_MEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UI Operation Only - Do not store or migrate data into this Field</description>
        <label>isSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSubmissionCycleSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not award Actual ME unless the SubmissionCycle has been submitted</description>
        <label>isSubmissionCycleSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <label>Publication ME</label>
    <listViews>
        <fullName>Publication_ME_Upd</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>Publication__c</columns>
        <columns>NAME</columns>
        <columns>WritingRoleMember__c</columns>
        <columns>Department__c</columns>
        <columns>AppearRole__c</columns>
        <columns>PubStatus__c</columns>
        <columns>MeCycleNum__c</columns>
        <columns>CalculatedME__c</columns>
        <columns>OverrideME__c</columns>
        <columns>ActualME__c</columns>
        <columns>Submission_Cycle_Num_Formula__c</columns>
        <columns>FPR_Cycle__c</columns>
        <columns>ME_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication__c</field>
            <operation>equals</operation>
            <value>Pub-Id-010962</value>
        </filters>
        <label>Publication ME Upd</label>
    </listViews>
    <listViews>
        <fullName>RanjeetView</fullName>
        <columns>NAME</columns>
        <columns>FPR_Cycle__c</columns>
        <columns>FPR_Cycle_sort_num__c</columns>
        <columns>IsCurrentSubmissionCycleForPub__c</columns>
        <columns>MeCycleNum__c</columns>
        <columns>ME_Status__c</columns>
        <columns>Submission_Cycle__c</columns>
        <columns>Submission_Cycle_Num_Formula__c</columns>
        <columns>WritingRoleMember__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication__c</field>
            <operation>equals</operation>
            <value>Pub-Id-055069</value>
        </filters>
        <label>RanjeetView</label>
    </listViews>
    <nameField>
        <displayFormat>PME-{000000000}</displayFormat>
        <label>Publication ME Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication MEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>